Edits based on first draft of personal website with almost complete information roster. +1

--- a/_config.yml
+++ b/_config.yml
@@ -243,7 +243,7 @@ defaults:
   #     comments: true
   #     share: true
   #     related: true
-  _pages
+  # _pages
   - scope:
       path: ""
       type: pages
